Fix toolbar dialog header collapse when in another dialog
Bug: T283598

--- a/src/ui/styles/dialogs/ve.ui.ToolbarDialog.css
+++ b/src/ui/styles/dialogs/ve.ui.ToolbarDialog.css
@@ -69,6 +69,7 @@
 /* Override ProcessDialog styles */
 .ve-ui-toolbarDialog .oo-ui-window-head {
 	height: 0;
+	min-height: 0;
 	outline: 0;
 }
 
